Checking speed of changes as deployed on Render

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
       <img class="img-fluid" id="banner" img src="https://careers-website-guided-project.wes18.repl.co/static/banner.jpeg" height="320">
       <h2 class="text-center">About Wesley</h2>
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet justo donec enim diam vulputate ut pharetra. Aliquet enim tortor at auctor urna nunc id cursus. Ac ut consequat semper viverra nam libero. Pulvinar pellentesque habitant morbi tristique senectus. Sit amet consectetur adipiscing elit pellentesque habitant. Eget nunc lobortis mattis aliquam faucibus. Facilisis sed odio morbi quis commodo odio. Mauris nunc congue nisi vitae suscipit tellus mauris. Habitant morbi tristique senectus et netus. Molestie ac feugiat sed lectus vestibulum. Molestie a iaculis at erat pellentesque adipiscing commodo.</p>
-      <h2 class="text-center" mt-2 mb-4>Open Positions</h2>
+      <h2 class="text-center" mt-2 mb-4>Job Openings</h2>
       <div>
         {% for job in jobs %}
           {% include 'jobitem.html' %}
