--- a/templates/home.html
+++ b/templates/home.html
@@ -6,15 +6,20 @@
     <title>Wesley's Guided Career Web App Project 231231</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
-      
+      #banner {
+        height: 800px;
+        width: 100%;
+        object-fit:cover;
+        margin-bottom: 16px;
+      }
     </style>
   </head>
  
   <body>
+    {% include 'nav.html' %}
+    <img class="img-fluid" id="banner" img src="https://careers-website-guided-project.wes18.repl.co/static/banner.jpeg" height="320">
     <div class="container">
       <h1 class="text-center">{{company_name}} Careers</h1>
-      <img class="img-fluid" id="banner" img src="https://careers-website-guided-project.wes18.repl.co/static/banner.jpeg" height="320">
-      <h2 class="text-center">About Wesley</h2>
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet justo donec enim diam vulputate ut pharetra. Aliquet enim tortor at auctor urna nunc id cursus. Ac ut consequat semper viverra nam libero. Pulvinar pellentesque habitant morbi tristique senectus. Sit amet consectetur adipiscing elit pellentesque habitant. Eget nunc lobortis mattis aliquam faucibus. Facilisis sed odio morbi quis commodo odio. Mauris nunc congue nisi vitae suscipit tellus mauris. Habitant morbi tristique senectus et netus. Molestie ac feugiat sed lectus vestibulum. Molestie a iaculis at erat pellentesque adipiscing commodo.</p>
       <h2 class="text-center" mt-2 mb-4>Job Openings</h2>
       <div>
@@ -24,8 +29,8 @@
       </div>
       <div class="text-center">
       <button class="btn btn-primary btn-lg">Contact Us</button>
-        <p class="mt-4">Copyright 2024, @SmarterWes</p>
       </div>
     </div>
+    {% include 'footer.html' %}
   </body>
 </html>
